style : fix portrait overlap

--- a/client/src/components/styles/polaroid-collection.css
+++ b/client/src/components/styles/polaroid-collection.css
@@ -7,7 +7,7 @@
   z-index: 500;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 920px) {
   #polaroid-collection{
     grid-template-columns: repeat(2, 1fr);
   }
